--- a/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/SysObject/_AddModal.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/SysObject/_AddModal.cshtml
@@ -12,7 +12,7 @@
             <label class="col-md-2 control-label">@L("ParentKey")</label>
             <div class="col-md-10">
                 <div class="form-line">
-                    <input class="form-control" type="text" name="ParentKey" maxlength="200">
+                    <input class="form-control" type="text" name="ParentKey" maxlength="200" value="@(ViewBag.ParentKey??"")" readonly>
                 </div>
             </div>
         </div>
@@ -20,7 +20,7 @@
             <label class="col-md-2 control-label">@L("ObjectKey")<span style="color:red;">*</span></label>
             <div class="col-md-10">
                 <div class="form-line">
-                    <input class="form-control" type="text" name="ObjectKey" maxlength="255" required>
+                    <input class="form-control" type="text" name="ObjectKey" maxlength="255" value="@((ViewBag.ParentKey??"")!=""? ViewBag.ParentKey +"." : "")" required>
                 </div>
             </div>
         </div>
