--- a/src/Fostor.Ginkgo.Web.Mvc/wwwroot/css/style.css
+++ b/src/Fostor.Ginkgo.Web.Mvc/wwwroot/css/style.css
@@ -2396,7 +2396,7 @@ a {
   animation: none !important; }
 
 section.content {
-  margin: 100px 15px 0 315px;
+  margin: 65px 0px 0 210px;
   -moz-transition: 0.5s;
   -o-transition: 0.5s;
   -webkit-transition: 0.5s;
@@ -6718,13 +6718,13 @@ fieldset[disabled] .form-control {
   margin-left: -300px; }
 
 .ls-closed section.content {
-  margin-left: 15px; }
+  margin-left: 0px; }
 
 .ls-closed .bars:after, .ls-closed .bars:before {
   font-family: 'Material Icons';
   font-size: 24px;
   position: absolute;
-  top: 18px;
+  top: 12px;
   left: 20px;
   margin-right: 10px;
   -moz-transform: scale(0);
@@ -6771,14 +6771,14 @@ fieldset[disabled] .form-control {
   transform: scale(1); }
 
 .navbar-header {
-  padding: 10px 7px; }
+  padding: 5px 7px; }
   .navbar-header .bars {
     float: left;
     text-decoration: none; }
 
 .navbar-nav > li > a {
   padding: 7px 7px 2px 7px;
-  margin-top: 17px;
+  margin-top: 12px;
   margin-left: 5px; }
 
 .navbar-nav .dropdown-menu {
@@ -7522,12 +7522,12 @@ fieldset[disabled] .form-control {
   transition: all 0.5s;
   font-family: "Roboto", sans-serif;
   background: #fdfdfd;
-  width: 300px;
+  width: 220px;
   overflow: hidden;
   display: inline-block;
-  height: calc(100vh - 70px);
+  height: calc(100vh - 60px);
   position: fixed;
-  top: 70px;
+  top: 60px;
   left: 0;
   -webkit-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
@@ -7633,7 +7633,7 @@ fieldset[disabled] .form-control {
                 text-overflow: ellipsis;
                 overflow: hidden;
                 font-size: 14px;
-                max-width: 250px;
+                max-width: 170px;
             }
 
             .sidebar .user-info .info-container .email {
@@ -7643,7 +7643,7 @@ fieldset[disabled] .form-control {
                 text-overflow: ellipsis;
                 overflow: hidden;
                 font-size: 12px;
-                max-width: 250px;
+                max-width: 170px;
             }
 
             .sidebar .user-info .info-container .user-helper-dropdown {
@@ -8180,9 +8180,9 @@ input[type="number"] {
 
 /* main card panel*/
 .main-card {
-    min-height: calc(100vh - 120px);
+    min-height: calc(100vh - 75px);
 }
 
-/*section.content div.card {
-    min-height: calc(100vh - 120px);
-}*/
+section.content div.card:not(.sm-card) {
+    min-height: calc(100vh - 75px);
+}
